--- a/Style.css
+++ b/Style.css
@@ -68,6 +68,8 @@ body {
 }
 .info_text {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 1em;
 }
 .info_text h3 {
@@ -373,12 +375,9 @@ body {
     padding: 1.5em;
   }
 
-  .profile {
-    flex-direction: column;
-  }
-
+ 
   .info_text {
-    align-items: center;
+    align-self: start;
   }
 
   .photo1, .photo2, .photo4, .photo5, .photo6, .photo7 {
@@ -392,5 +391,24 @@ body {
 
   .star {
     align-self: flex-end;
+    margin-top: 1em;
   }
+}
+
+
+@media (max-width: 375px) {
+    .profile {
+        flex-direction: column;
+        text-align: center;
+    } 
+    .info_text {
+        flex-direction: column;
+        align-self: center;
+    } 
+
+    .star {
+        align-self: center;
+        margin-top: 1em;
+    }
+
 }
