--- a/Style.css
+++ b/Style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-    max-width: 1400px;
+    max-width: 1250px;
 }
 
 .titre {
@@ -274,7 +274,7 @@ body {
 
 @media (max-width: 1024px) {
   .container {
-    max-width: 95%;
+    max-width: 90%;
     margin: 0 auto;
   }
 
@@ -304,8 +304,8 @@ body {
     width: 65%;
   }
 
-  .card2, .card6 {
-    width: 36%;
+  .card2, .card6, .card7 {
+    width: 48%;
   }
 
   .card3, .card4 {
